--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-toastify": "^9.1.2",
     "react-youtube": "^10.1.0",
     "redis": "^4.6.5",
     "socket.io": "^4.6.1",
