--- a/package.json
+++ b/package.json
@@ -14,23 +14,22 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "postcss": "8.4.21",
-    "pusher": "^5.1.2",
-    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2",
     "react-youtube": "^10.1.0",
-    "redis": "^4.6.5",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "socketio": "^1.0.0",
     "tailwindcss": "3.3.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "zustand": "^4.3.7"
   }
 }
